Bug 533765 - Fix broken CSS on PTP website

--- a/style.css
+++ b/style.css
@@ -7,21 +7,10 @@
     text-align: center;
 }
 
-#leftnav li {
-    list-style-image: none;
-    list-style-type: disc;
-}
-
 #leftnav .separator {
     list-style-type: none;
 }
 
 #leftnav .separator img {
 	display: none;
-}
-
-#novaContent li {
-    padding: 0;
-    list-style-type: disc;
-    list-style-image: none;
 }
